# ai-meal-planning

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PRD.md  README.md  alembic.ini  compose.prod.yaml  compose.yaml  prd.md  pyproject.toml
.github/workflows/: deploy.yml
aimealplanner/: __main__.py  app.py
aimealplanner/application/: __init__.py  greeting.py
aimealplanner/application/analytics/: __init__.py  tracker.py
aimealplanner/application/onboarding/: __init__.py  dto.py  repositories.py  service.py
aimealplanner/application/planning/: __init__.py  browsing_dto.py  browsing_service.py  dto.py  feedback_dto.py  feedback_service.py  generation_dto.py  generation_service.py  policy_service.py  recipe_dto.py  recipe_service.py  replacement_dto.py  replacement_service.py  replanning_service.py  repositories.py  service.py  shopping_dto.py  shopping_service.py
aimealplanner/application/reminders/: __init__.py  dto.py  repositories.py  scheduler.py  service.py
aimealplanner/application/settings/: __init__.py  dto.py  repositories.py  service.py
aimealplanner/core/: __init__.py  config.py  logging.py
aimealplanner/domain/: __init__.py  types.py
aimealplanner/infrastructure/ai/: __init__.py  openai_client.py
aimealplanner/infrastructure/analytics/: __init__.py  posthog.py
aimealplanner/infrastructure/db/: __init__.py  enums.py  initialization.py  mixins.py  session.py
aimealplanner/infrastructure/db/models/: __init__.py  dish.py  feedback.py  (+5 more)
aimealplanner/infrastructure/monitoring/: __init__.py  sentry.py
aimealplanner/infrastructure/recipes/: __init__.py  spoonacular.py
aimealplanner/infrastructure/redis/: __init__.py  client.py
aimealplanner/presentation/telegram/: __init__.py  analytics.py  commands.py  onboarding_parsing.py  planning_parsing.py  router.py
docs/: 2026-03-15-onboarding-and-planning-flow-spec.md  ARCHITECTURE.md  BOT_COMMANDS.md  DEPLOYMENT.md
migrations/: env.py
migrations/versions/: fd975e906f62_create_initial_mvp_schema.py
scripts/: run-bot.sh
tests/unit/: test_config.py  test_greeting.py  test_onboarding_parsing.py  test_planning_parsing.py  test_schema_metadata.py
tests/unit/application/: test_feedback_service.py  test_onboarding_service.py  test_planning_browsing_service.py  test_planning_generation_service.py  test_planning_policy_service.py  test_planning_replacement_service.py  test_planning_service.py  test_recipe_service.py  test_reminder_service.py  test_replanning_service.py  test_settings_service.py  test_shopping_service.py
tests/unit/infrastructure/: test_planning_repository_helpers.py  test_posthog_analytics.py  test_sentry_monitor.py
tests/unit/presentation/: test_planning_keyboard.py  test_shopping_handler_helpers.py  test_telegram_commands.py
(+30 files in other folders)
